--- a/kernel_space/Makefile
+++ b/kernel_space/Makefile
@@ -1,3 +1,5 @@
 #Do Ctrl-F and find this line below in the kernel source code Makefile and write your system call directory name there.
 
 core-y		+= kernel/ certs/ mm/ fs/ ipc/ security/ crypto/ block/ sjf/
+
+# sjf above is the directory name where the system call code .c files is kept.
